[gd_scene load_steps=8 format=3 uid="uid://cvk437y7rdtj"]

[ext_resource type="Script" uid="uid://d3pq63g4fcwnc" path="res://Scripts/pause_menu.gd" id="1_05uyy"]
[ext_resource type="Texture2D" uid="uid://cyuyobdcav0kt" path="res://Assets/background-assets/background.png" id="2_p81d2"]
[ext_resource type="FontFile" uid="uid://c8p3km8sqnn1t" path="res://Assets/background-assets/apocalypse fax.ttf" id="3_2nc7s"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_d3xb4"]
texture = ExtResource("2_p81d2")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mxa3g"]
bg_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e8sti"]
bg_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q2yj1"]
bg_color = Color(0, 0, 0, 0)

[node name="pause_menu" type="CanvasLayer"]
script = ExtResource("1_05uyy")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_d3xb4")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -90.0
offset_right = 90.0
offset_bottom = 76.0
grow_horizontal = 2
alignment = 1

[node name="ResumeButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_2nc7s")
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = SubResource("StyleBoxFlat_mxa3g")
text = "Resume"

[node name="ResetButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_2nc7s")
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = SubResource("StyleBoxFlat_e8sti")
text = "Reset Chapter"

[node name="MenuButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_2nc7s")
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = SubResource("StyleBoxFlat_q2yj1")
text = "Main Menu"
